[tool.poetry]
name = "scramble_to_unscramble"
version = "0.1.0"
description = ""
authors = ["Alex Hall <alex.mojaki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
littleutils = "^0.2.2"
networkx = "^2.5"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
